cabios en index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hola</h1>
-    <p>Hola ahora eres israel ya no tarahaking</p>
+    
+    <p>Nuevo ambiente virtual</p>
 </body>
 </html>
